--- a/source/main/mnull.html
+++ b/source/main/mnull.html
@@ -1,10 +1,11 @@
 <!Doctype html>
 <html lang="zh-cn">
 <head>
+    <meta charset="UTF-8">
 </head>
 <body>
     <center>
         <h1 style="margin:20px auto;">无效的请求...</h1>
     </center>
 </body>
-</html>
+</html> 
